# tveru

./: CHANGELOG.md  Cargo.toml  LICENSE  README-en.md  README.md
.github/workflows/: release.yaml
docs/: CHANGELOG.txt  README.txt
src/: cache.rs  constants.rs  display.rs  error.rs  fetch.rs  launch.rs  lib.rs  main.rs  reconfig.rs  sift.rs
src/utils/: date_parser.rs  ep_parser.rs  helper.rs  mod.rs  network.rs  report.rs
