[package]
name    = "tveru"
version = "0.2.0"
edition = "2024"

authors     = ["Michimoto Katase <mkatase@gmail.com>"]
license     = "MIT"
description = "A lightweight, keyboard-driven TVer drama aggregator and streaming CLI utility."
repository  = "https://github.com/mkatase/tveru"
readme      = "README.md"

[dependencies]
chrono     = { version = "0.4.45", features = ["serde"] }
clap       = { version = "4.6.2", features = ["derive"] }
colored    = "3.1.1"
indicatif  = "0.18.6"
regex      = "1.13.1"
serde      = { version = "1.0.229" , features = ["derive"] }
serde_json = "1.0.151"
thirtyfour = "0.37.2"
tokio      = { version = "1.53.0", features = ["full"] }
